--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -7,8 +7,8 @@ bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,1
 dns-server = https://doh.pub/dns-query, https://dns.alidns.com/dns-query
 
 [Proxy Group]
-🇭🇰Hong Kong = url-test,url=http://www.gstatic.com/generate_204,interval=1800,tolerance=10,timeout=5,select=0,policy-regex-filter=香港
-🇸🇬Singapore = url-test,url=http://www.gstatic.com/generate_204,interval=1800,tolerance=10,timeout=5,select=0,policy-regex-filter=新加坡
+🇭🇰Hong Kong = select,url=http://www.gstatic.com/generate_204,interval=1800,tolerance=10,timeout=5,select=0,policy-regex-filter=香港
+🇸🇬Singapore = select,url=http://www.gstatic.com/generate_204,interval=1800,tolerance=10,timeout=5,select=0,policy-regex-filter=新加坡
 
 [Rule]
 # 哔哩哔哩-香港
