--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1,3 +1,4 @@
+# Shadowrocket: 2022-10-17 10:55:50
 [General]
 # 默认关闭 ipv6 支持，如果需要请手动开启
 ipv6 = false
@@ -5,30 +6,27 @@ bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, e.crashlytics.com, captive.apple.com
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
 dns-server = https://doh.pub/dns-query, https://dns.alidns.com/dns-query
+update-url = https://raw.githubusercontent.com/moyuxian/shdaowrocket/main/shadowrocket.conf
 
 [Proxy Group]
-🇭🇰Hong Kong = select,url=http://www.gstatic.com/generate_204,interval=1800,tolerance=10,timeout=5,select=0,policy-regex-filter=香港
-🇸🇬Singapore = select,url=http://www.gstatic.com/generate_204,interval=1800,tolerance=10,timeout=5,select=0,policy-regex-filter=新加坡
+🇭🇰Hong Kong = select,url=http://www.gstatic.com/generate_204,interval=86400,timeout=5,select=7,policy-regex-filter=香港
+🇸🇬Singapore = select,policy-regex-filter=新加坡,interval=1800,url=http://www.gstatic.com/generate_204,timeout=5,select=3
 
 [Rule]
 # 哔哩哔哩-香港
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/BiliBili/BiliBili.list, PROXY
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/BiliBili/BiliBili.list,🇭🇰HONG KONG
 # apple-直连
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Apple/Apple.list, PROXY
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Apple/Apple.list,PROXY
 # Netflix-代理
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Netflix/Netflix.list, PROXY
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Netflix/Netflix.list,🇸🇬SINGAPORE
 # 国内域名-直连
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/China/China.list, DIRECT
-
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/China/China.list,DIRECT
 #国内IP直连
 GEOIP,CN,DIRECT
 FINAL,PROXY
 
-[Host]
-
 [URL Rewrite]
 ^https?://(www.)?(g|google)\.cn https://www.google.com 302
-[Script]
 
 [MITM]
 hostname = *.google.cn,*.googlevideo.com
